<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_login_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.khome.kdaydin.sudroid.LoginInfo"
    tools:showIn="@layout/activity_login_info">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/web_bg_app"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/request_ID"
            android:textColor="@color/darkText"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/get_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_filler"
            android:textColorHint="@color/darkTextTransparent"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/request_Pass"
            android:textColor="@color/darkText"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/get_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_filler"
            android:textColorHint="@color/darkTextTransparent"
            android:inputType="textPassword"/>
    </LinearLayout>

</RelativeLayout>
